# vulkan_compute_step1

./: CMakeLists.txt  LICENSE  README.md
shaders/: comp.spv  compileShaders.bat  compileShaders.sh  shader.comp  shaderCommon.h  shader_rng.h  shader_varying_work.comp  shader_varying_work.spv
src/: main.cpp  vk_utils.cpp  vk_utils.h
